Remove deprecated JAVA-Option from start script
MaxPermSize was deprecated in Java 8 and not supported in later versions